[gd_scene load_steps=7 format=3 uid="uid://pa7kt51pp6hn"]

[ext_resource type="Script" path="res://scripts/entities/projectiles/mine.gd" id="1_5uiaf"]
[ext_resource type="Texture2D" uid="uid://cfp72oug4onvb" path="res://sprites/projectiles/banana_peel.png" id="2_hcfr8"]
[ext_resource type="Script" path="res://scripts/entity-components/damage_dealer_component.gd" id="3_eyseo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lsqqw"]
radius = 11.9997
height = 52.0128

[sub_resource type="Animation" id="Animation_mnhlk"]
resource_name = "despawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vnc48"]
_data = {
"despawn": SubResource("Animation_mnhlk")
}

[node name="BananaPeel" type="RigidBody2D"]
collision_layer = 2
collision_mask = 50
continuous_cd = 1
max_contacts_reported = 5
contact_monitor = true
script = ExtResource("1_5uiaf")

[node name="Sprite2D" type="Sprite2D" parent="."]
visibility_layer = 8
position = Vector2(1, -1)
scale = Vector2(4, 4)
texture = ExtResource("2_hcfr8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -5)
rotation = -1.57782
shape = SubResource("CapsuleShape2D_lsqqw")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="DamageDealerComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 36
script = ExtResource("3_eyseo")
_damage = 50
_conditions = {
"tripped": 3.0
}
_knockback = 10.0
_pierce = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DamageDealerComponent"]
position = Vector2(-2, -5)
rotation = -1.57782
shape = SubResource("CapsuleShape2D_lsqqw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vnc48")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="area_entered" from="DamageDealerComponent" to="DamageDealerComponent" method="_on_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
